[gd_scene load_steps=2 format=2]

[ext_resource path="res://Fish/Behaviours/LungeAtBobber/LungeAtBobber.gd" type="Script" id=1]

[node name="LungeAtBobber" type="Node2D"]
script = ExtResource( 1 )

[node name="CooldownBetweenLunges" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="RestTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="StunnedTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="CooldownBetweenLunges" to="." method="_on_CooldownBetweenLunges_timeout"]
[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]
[connection signal="timeout" from="StunnedTimer" to="." method="_on_StunnedTimer_timeout"]
